name: torsor
version: 0.1
synopsis: Torsor Typeclass
description: Torsor Typeclass
homepage: https://github.com/andrewthad/torsor#readme
license: BSD3
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2017 Andrew Martin
category: Web
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules: Torsor,
                   Torsor.Collections
  build-depends: base >= 4.7 && < 5
               , containers
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/andrewthad/torsor


test-suite test
    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          Tests.hs

    -- Test dependencies.
    build-depends: base >= 4.7 && < 5
                    , torsor
                    , tasty
                    , tasty-hspec
                    , tasty-quickcheck
                    , containers